/// <summary>
/// Таблица символов.
/// </summary>
class SymbolTable
{

}
