#pragma once

#ifndef UNICODE_READER_H
#define UNICODE_READER_H

#include "UnicodeToken.hpp"

/*
	?. Потоки могут кодировать разнообразную информацию. Текст является основной её формой, с которой будут работать
	лексические анализаторы и генераторы, описанные интерфейсами ниже. На данный момент именование интерфейсов не
	подразумевает использование префиксов.
*/

// Интерфейс символьного анализатора.
// TODO Данный класс не должен наследоваться от символа Юникода.
// TODO Необходимо продумать композицию интерфейсов.
class UnicodeReader: public UnicodeToken {
public:

	// Чтение следующего символа.
	virtual int ReadChar() = 0;
};

#endif // UNICODE_READER_H
